<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchScanActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_62sdp"
        android:backgroundTint="@color/darkTheme_Background_two"
        app:cardCornerRadius="0dp">

        <TextView
            android:id="@+id/secondaryHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            android:text="@string/scan_text"
            android:textColor="@color/darkTheme_WhiteFull"
            android:fontFamily="@font/circular"
            android:textSize="@dimen/_15ssp"
            android:paddingTop="@dimen/_23sdp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_backarrow" />

    </androidx.cardview.widget.CardView>

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_62sdp"/>

    <RelativeLayout
        android:id="@+id/barcodeFoundLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkTheme_Transparent"
        android:layout_gravity="bottom"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkTheme_Background"
            android:backgroundTint="@color/darkTheme_Background"
            app:cardCornerRadius="@dimen/_5sdp">

            <ImageView
                android:id="@+id/backInfoButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_27sdp"
                android:layout_marginTop="@dimen/_27sdp"
                android:padding="@dimen/_7sdp"
                android:src="@drawable/ic_backarrow" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/barcode_scan_success_header"
                android:textColor="@color/darkTheme_WhiteFull"
                android:textSize="@dimen/_14ssp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/upcidTextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/filler_upc_found_text"
                android:textColor="@color/darkTheme_WhiteFull"
                android:textSize="14dp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/searchBtn"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:backgroundTint="@color/darkTheme_Background_two"
                    app:cardCornerRadius="100dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/search_text"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textColor="@color/darkTheme_WhiteFull"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/addBtn"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_30sdp"
                    android:backgroundTint="@color/darkTheme_Background_two"
                    app:cardCornerRadius="100dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/add_item_text"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textColor="@color/darkTheme_WhiteFull"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>