<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkTheme_Background"
    android:backgroundTint="@color/darkTheme_Background"
    tools:context=".SearchActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Search bar-->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_62sdp"
                    android:alpha="1"
                    android:backgroundTint="@color/darkTheme_Background_two">


                    <EditText
                        android:id="@+id/searchTextField"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/darkTheme_Transparent"
                        android:gravity="center_vertical"
                        android:inputType="text"
                        android:fontFamily="@font/circular_med"
                        android:hint="@string/search_bar_text"
                        android:paddingStart="@dimen/_40sdp"
                        android:paddingTop="@dimen/_20sdp"
                        android:textColor="@color/darkTheme_WhiteFull"
                        android:textColorHint="@color/darkTheme_WhiteMed"
                        android:textSize="@dimen/_14ssp"
                        android:imeActionLabel="xxxx"
                        android:imeOptions="actionSearch"
                        android:maxLines="1" />

                    <ImageView
                        android:id="@+id/backButton"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:padding="@dimen/_7sdp"
                        android:src="@drawable/ic_backarrow" />

                    <ImageView
                        android:id="@+id/barcodeScanButton"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="right"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_barcode_scan" />

                </androidx.cardview.widget.CardView>

                <!--Empty Search Layout-->
                <LinearLayout
                    android:id="@+id/emptySearchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_180sdp"
                        android:text="@string/not_finding_item_text"
                        android:textColor="@color/darkTheme_WhiteFull"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/not_finding_item_description_text"
                        android:textAlignment="center"
                        android:textColor="@color/darkTheme_WhiteMed"
                        android:textSize="@dimen/_10ssp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/addBtn"
                        android:layout_width="@dimen/_180sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_100sdp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/darkTheme_Background_two">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:clickable="false"
                            android:text="@string/add_item_text"
                            android:textColor="@color/darkTheme_WhiteFull"/>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/searchRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkTheme_Background"
        app:itemBackground="@null"
        app:itemIconTint="@color/darkTheme_WhiteFull"
        app:itemTextColor="@color/darkTheme_WhiteFull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:menu="@menu/bottom_navmenu" />


</androidx.constraintlayout.widget.ConstraintLayout>